Refactor project clean

--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
 
 		<div id="vyherni-cisla"></div>
 
-
 	</div>
 
-	<script src="main.js"></script>
+	<script src="sportka.js"></script>
 
 </body>
 </html>
